[gd_scene load_steps=4 format=3 uid="uid://cadbt47k3fq7f"]

[ext_resource type="Texture2D" uid="uid://dmg0c7yxup1pi" path="res://art/pc_background.png" id="1_bexhn"]
[ext_resource type="Script" uid="uid://cst7ony8m4d2u" path="res://scripts/Level.gd" id="1_t7iv1"]
[ext_resource type="AudioStream" uid="uid://b5uh8j4dsj2no" path="res://audio/pew.mp3" id="4_wkftn"]

[node name="Level" type="Node2D"]

[node name="Background" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(638.5, 358.5)
scale = Vector2(3.622159, 3.1919644)
texture = ExtResource("1_bexhn")

[node name="ScreenContainer" type="SubViewportContainer" parent="Background"]
offset_left = -128.51451
offset_top = -96.962234
offset_right = 128.7906
offset_bottom = 49.34265
mouse_filter = 0
stretch = true

[node name="GameViewport" type="SubViewport" parent="Background/ScreenContainer"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(257, 146)
size_2d_override = Vector2i(640, 280)
render_target_update_mode = 4

[node name="GameRoot" type="Node2D" parent="Background/ScreenContainer/GameViewport"]
script = ExtResource("1_t7iv1")
game_viewport_path = NodePath("..")

[node name="CanvasLayer" type="CanvasLayer" parent="Background/ScreenContainer/GameViewport/GameRoot"]

[node name="HBoxContainer" type="HBoxContainer" parent="Background/ScreenContainer/GameViewport/GameRoot/CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="TimeLabel" type="Label" parent="Background/ScreenContainer/GameViewport/GameRoot/CanvasLayer/HBoxContainer"]
layout_mode = 2
text = "Tempo: 30.0"

[node name="ScoreLabel" type="Label" parent="Background/ScreenContainer/GameViewport/GameRoot/CanvasLayer/HBoxContainer"]
visible = false
layout_mode = 2
text = "Kills: 0/10"
horizontal_alignment = 2

[node name="StatusLabel" type="Label" parent="Background/ScreenContainer/GameViewport/GameRoot/CanvasLayer/HBoxContainer"]
layout_mode = 2

[node name="OutcomeOverlay" type="Control" parent="Background/ScreenContainer/GameViewport/GameRoot/CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OutcomeVideo" type="VideoStreamPlayer" parent="Background/ScreenContainer/GameViewport/GameRoot/CanvasLayer/OutcomeOverlay"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
expand = true

[node name="SpawnTimer" type="Timer" parent="Background/ScreenContainer/GameViewport/GameRoot"]
autostart = true

[node name="LevelTimer" type="Timer" parent="Background/ScreenContainer/GameViewport/GameRoot"]
one_shot = true

[node name="SFXPew" type="AudioStreamPlayer2D" parent="Background/ScreenContainer/GameViewport/GameRoot"]
stream = ExtResource("4_wkftn")

[connection signal="timeout" from="Background/ScreenContainer/GameViewport/GameRoot/SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="Background/ScreenContainer/GameViewport/GameRoot/LevelTimer" to="." method="_on_LevelTimer_timeout"]
